# tts-cr-agent

./: .env.example  .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy-backend.yml
backend/: Dockerfile  alembic.ini  apprunner.yaml  pyproject.toml  render-build.sh  requirements-dev.txt  requirements.txt  start.sh
backend/app/: config.py  main.py
backend/app/core/: auth.py  database.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 1b15d95fea57_add_conversations_and_chat_messages.py  a1b2c3d4e5f6_add_tiktok_oauth_fields_to_users.py  c3ddb00d3089_add_global_knowledge_table.py  e8fafdf17f30_initial_tables.py
backend/app/models/: __init__.py  conversation.py  cr_project.py  creator.py  global_knowledge.py  knowledge_base.py  shop.py  trend_product.py  user.py
backend/app/routers/: admin_knowledge.py  auth.py  copilot.py  cr.py  fastmoss.py  health.py  knowledge.py  market.py  shops.py  tiktok_auth.py
backend/app/schemas/: admin_knowledge.py  copilot.py  cr_project.py  health.py  knowledge.py  market.py  shop.py  user.py
backend/app/services/: ai_client.py  copilot_service.py  cr_generator.py  embedding_service.py  fastmoss_service.py  pinecone_service.py
docs/: SPEC_v2.docx
frontend/: Dockerfile  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: tiktokX04ycDAcZ85Eooku1BXHte6xwzztopXj.txt
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts
infra/: docker-compose.yml
(+14 files in other folders)
